fixed overflow issue on local listings

--- a/app/assets/stylesheets/partials/helpers.sass
+++ b/app/assets/stylesheets/partials/helpers.sass
@@ -7,6 +7,8 @@
 
 .hidden
   display: none
+.overflowable
+  overflow: visible
 
 .big
   font-size: 1.25em
